# Template-engine

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: main.yml
example/: result.txt
parser/ArgueParser/: argue_parser.cpp  argue_parser.h
parser/DataParser/: data_parse.cpp  data_parse.h
parser/ValueParser/: value_parse.cpp  value_parse.h
parser/loggers/: logger_in_file.cpp  logger_in_file.h  logger_out_file.cpp  logger_out_file.h
tests/: test_generator.cpp
